--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.5
   get: ^4.6.5
+  google_fonts: ^4.0.4
   shared_preferences: ^2.1.1
 
 dev_dependencies:
@@ -49,9 +50,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/first_image.svg
+    - assets/images/login_image.svg
+    # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
