--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.5
   get: ^4.6.5
+  get_storage: ^2.1.1
   google_fonts: ^4.0.4
   shared_preferences: ^2.1.1
 
